welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: not found: value avnce
		else { if (litMessage() == 'I' ) {droite();droite();avnce()}
                                                                    ^